# ComfyUI_DreamBoard

./: LICENSE  README.md  __init__.py  prompt_extra_node.py  pyproject.toml  requirements.txt  storyboard_node.py
.github/workflows/: publish.yml
